add tradingview script

--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "lucide-react": "0.105.0-alpha.4",
     "next": "^13.4.8",
     "next-themes": "^0.2.1",
+    "prismjs": "^1.29.0",
     "punycode": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "rehype-highlight": "^7.0.0",
     "sharp": "^0.31.3",
     "sonner": "^1.0.3",
     "tailwind-merge": "^1.13.2",
