--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@octokit/core": "^5.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -32,9 +33,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "rehype-highlight": "^7.0.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.6",
     "sonner": "^1.0.3",
-    "tailwind-merge": "^1.13.2",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.4"
   },
