--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
+    "next": "^13.5.6",
     "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-resizable-panels": "^1.0.5",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.0.3",
