--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
     ],
     "strictNullChecks": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "lib/fonts.js"
+  ],
   "exclude": ["node_modules"]
 }
