--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
+    "axios": "^1.6.5",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "lucide-react": "0.105.0-alpha.4",
@@ -36,7 +37,7 @@
     "react-resizable-panels": "^1.0.5",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
-    "sonner": "^1.0.3",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
     "zod": "^3.22.4"
