--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.490.0",
     "@hookform/resolvers": "^3.3.1",
+    "@marlowe.io/runtime-lifecycle": "^0.3.0-beta-rc1",
+    "@marlowe.io/wallet": "^0.3.0-beta-rc1",
     "@octokit/core": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -26,8 +30,9 @@
     "axios": "^1.6.5",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "firebase": "^10.7.1",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.5.6",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.0",
@@ -40,6 +45,7 @@
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
+    "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -50,7 +56,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^14.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
