--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@marlowe.io/runtime-lifecycle": "^0.3.0-beta-rc1",
     "@marlowe.io/wallet": "^0.3.0-beta-rc1",
     "@octokit/core": "^5.0.1",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -44,6 +45,7 @@
     "sharp": "^0.32.6",
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.6",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
