--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "firebase": "^10.7.1",
+    "framer-motion": "^11.0.8",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
