comment out for now

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
-    "@hookform/resolvers": "^3.3.1",
+    "@hookform/resolvers": "^3.3.4",
     "@marlowe.io/runtime-lifecycle": "^0.3.0-beta-rc1",
     "@marlowe.io/wallet": "^0.3.0-beta-rc1",
     "@octokit/core": "^5.0.1",
@@ -27,7 +27,9 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.1.2",
     "axios": "^1.6.5",
@@ -42,7 +44,7 @@
     "punycode": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
+    "react-hook-form": "^7.51.0",
     "react-resizable-panels": "^1.0.5",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
