--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -48,6 +48,8 @@
     "react-resizable-panels": "^1.0.5",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
@@ -57,6 +59,7 @@
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
+    "@types/memory-cache": "^0.2.5",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
