--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.1.2",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "firebase": "^10.7.1",
     "framer-motion": "^11.0.14",
     "lucide-react": "0.105.0-alpha.4",
     "memory-cache": "^0.2.0",
+    "net": "^1.0.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
@@ -47,8 +49,6 @@
     "react-hook-form": "^7.51.0",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
-    "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
     "sonner": "^1.3.1",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
