--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.6",
+    "throttle-debounce": "^5.0.0",
     "vaul": "^0.8.0",
     "zod": "^3.22.4"
   },
