add dialog content onClick using shadcn Dialog

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@vercel/analytics": "^1.1.2",
+    "@vercel/postgres": "^0.7.2",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
