--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.3.1",
