--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "firebase": "^10.7.1",
+    "firebase": "^10.6.0",
     "framer-motion": "^11.0.14",
     "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
@@ -59,7 +59,8 @@
     "tailwindcss-animate": "^1.0.6",
     "throttle-debounce": "^5.0.0",
     "vaul": "^0.8.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
