--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clsx": "^1.2.1",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.14",
+    "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lucide-react": "0.105.0-alpha.4",
     "memory-cache": "^0.2.0",
