--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-pdf/renderer": "^3.4.2",
     "@vercel/analytics": "^1.1.2",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
+    "@wojtekmaj/react-hooks": "^1.19.0",
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
@@ -52,6 +54,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-pdf": "^7.7.1",
     "react-transition-group": "^4.4.5",
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
