--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "express-rate-limit": "^7.2.0",
     "firebase": "^10.6.0",
     "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "lru-cache": "^10.2.0",
     "lucide-react": "0.105.0-alpha.4",
     "memory-cache": "^0.2.0",
     "net": "^1.0.2",
@@ -73,6 +75,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
