--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-pdf/renderer": "^3.4.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
