--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.490.0",
+    "@aws-sdk/s3-request-presigner": "^3.554.0",
     "@hookform/resolvers": "^3.3.4",
-    "@kinde-oss/kinde-auth-nextjs": "^1.9.2",
+    "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
     "@octokit/core": "^5.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -49,7 +50,7 @@
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lru-cache": "^10.2.0",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0-alpha.4",
     "memory-cache": "^0.2.0",
     "net": "^1.0.2",
     "next": "^14.0.4",
@@ -65,6 +66,8 @@
     "rehype-highlight": "^7.0.0",
     "sharp": "^0.32.6",
     "sonner": "^1.3.1",
+    "stream": "^0.0.2",
+    "stream-to-buffer": "^0.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.6",
