--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@firebase/messaging": "^0.12.8",
     "@hookform/resolvers": "^3.3.4",
     "@kinde-oss/kinde-auth-nextjs": "^2.2.3",
+    "@kinde-oss/kinde-auth-react": "^3.0.28",
     "@octokit/core": "^5.0.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
