--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.10.0",
     "react-pdf": "^7.7.1",
     "react-transition-group": "^4.4.5",
     "rehype-highlight": "^7.0.0",
