--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-pdf/renderer": "^3.4.2",
+    "@tsparticles/engine": "^3.3.0",
+    "@tsparticles/react": "^3.0.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
     "@vercel/postgres": "^0.7.2",
@@ -75,6 +77,7 @@
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.6",
     "throttle-debounce": "^5.0.0",
+    "tsparticles": "^3.3.0",
     "vaul": "^0.8.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
