--- a/package.json
+++ b/package.json
@@ -55,16 +55,17 @@
     "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lru-cache": "^10.2.0",
     "lucide-react": "^0.105.0-alpha.4",
     "memory-cache": "^0.2.0",
     "net": "^1.0.2",
-    "next": "^14.0.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.0",
@@ -93,7 +94,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
-    "eslint-config-next": "^14.0.4",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
