--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -40,9 +40,9 @@
     "@react-pdf/renderer": "^3.4.2",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
+    "@types/pdfjs-dist": "^2.10.378",
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.1.2",
-    "@vercel/postgres": "^0.7.2",
     "@vercel/speed-insights": "^1.0.10",
     "@wojtekmaj/react-hooks": "^1.19.0",
     "axios": "^1.6.8",
@@ -62,6 +62,7 @@
     "net": "^1.0.2",
     "next": "^14.0.4",
     "next-themes": "^0.2.1",
+    "pdfjs-dist": "^4.3.136",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.0",
     "react": "^18.3.1",
