--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "next-themes": "^0.2.1",
     "pdfjs-dist": "^4.3.136",
     "prismjs": "^1.29.0",
-    "punycode": "^2.3.0",
+    "punycode": "^2.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
@@ -89,6 +89,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
     "@types/memory-cache": "^0.2.5",
     "@types/node": "^17.0.45",
+    "@types/punycode": "^2.1.4",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/uuid": "^9.0.8",
