--- a/package.json
+++ b/package.json
@@ -57,10 +57,11 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^10.2.0",
-    "lucide-react": "^0.105.0-alpha.4",
+    "lucide": "^0.433.0",
+    "lucide-react": "^0.105.0",
     "memory-cache": "^0.2.0",
     "net": "^1.0.2",
-    "next": "^14.2.4",
+    "next": "^14.2.7",
     "next-themes": "^0.2.1",
     "pdfjs-dist": "^4.3.136",
     "prismjs": "^1.29.0",
