--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-visually-hidden": "^1.1.0",
     "@react-pdf/renderer": "^3.4.2",
-    "@supabase/ssr": "^0.5.1",
     "@tsparticles/engine": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "@types/pdfjs-dist": "^2.10.378",
