--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lucide": "^0.433.0",
     "lucide-react": "^0.105.0",
     "memory-cache": "^0.2.0",
+    "moment": "^2.30.1",
     "net": "^1.0.2",
     "next": "^14.2.7",
     "next-themes": "^0.2.1",
@@ -75,7 +76,9 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.0",
     "react-pdf": "^9.0.0",
+    "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
+    "react-vis": "^1.12.1",
     "rehype-highlight": "^7.0.0",
     "sonner": "^1.3.1",
     "stream": "^0.0.2",
