--- a/package.json
+++ b/package.json
@@ -52,17 +52,12 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "debounce": "^2.0.0",
-    "express-rate-limit": "^7.2.0",
     "firebase": "^10.11.0",
     "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
-    "lodash": "^4.17.21",
-    "lodash.debounce": "^4.0.8",
-    "lru-cache": "^10.2.0",
     "lucide": "^0.433.0",
     "lucide-react": "^0.105.0",
     "memory-cache": "^0.2.0",
-    "moment": "^2.30.1",
     "net": "^1.0.2",
     "next": "^14.2.7",
     "next-themes": "^0.2.1",
@@ -70,7 +65,6 @@
     "pdfjs-dist": "^4.3.136",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.1",
-    "puppeteer": "^22.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.0",
@@ -79,17 +73,14 @@
     "react-pdf": "^9.0.0",
     "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
-    "rehype-highlight": "^7.0.0",
     "sonner": "^1.3.1",
     "stream": "^0.0.2",
     "tailwind-merge": "^1.14.0",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss-animate": "^1.0.6",
-    "throttle-debounce": "^5.0.0",
     "tsparticles": "^3.3.0",
     "vaul": "^0.8.0",
-    "zod": "^3.22.4",
-    "zustand": "^4.5.2"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
