--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-pdf": "^9.0.0",
     "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
+    "sharp": "^0.33.5",
     "sonner": "^1.3.1",
     "stream": "^0.0.2",
     "tailwind-merge": "^1.14.0",
