--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide": "^0.433.0",
     "lucide-react": "^0.105.0",
     "memory-cache": "^0.2.0",
