--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "node-loader": "^2.0.0",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.5"
   }
