--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.1",
+    "@clerk/themes": "^2.2.1",
     "@firebase/messaging": "^0.12.8",
     "@hookform/resolvers": "^3.3.4",
-
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
