remove loading spinner and remove small layout shift.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,11 @@
     "app/**/*.js",
     "app/**/*.jsx",
     "app/**/*.ts",
-    "app/**/*.tsx"
-, "hooks/useIsMobile.jsx"  ],
+    "app/**/*.tsx",
+    "hooks/**/*.js",
+    "hooks/**/*.jsx",
+    "hooks/**/*.ts",
+    "hooks/**/*.tsx"
+  ],
   "exclude": ["node_modules"]
 }
