--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.2",
@@ -61,6 +61,7 @@
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lucid-cardano": "^0.10.11",
     "lucide": "^0.433.0",
     "lucide-react": "^0.105.0",
     "memory-cache": "^0.2.0",
@@ -99,17 +100,17 @@
     "@types/react-dom": "^18.2.6",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^5.61.0",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.44.0",
     "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "node-loader": "^2.0.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^4.9.5"
   }
 }
