--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@blockfrost/blockfrost-js": "^5.7.0",
     "@clerk/nextjs": "^6.9.1",
     "@clerk/themes": "^2.2.1",
+    "@effect/schema": "^0.75.5",
     "@emurgo/cardano-serialization-lib-asmjs": "^13.2.0",
+    "@firebase/firestore": "^4.7.5",
     "@firebase/messaging": "^0.12.8",
+    "@firebase/storage": "^0.13.4",
     "@hookform/resolvers": "^3.3.4",
+    "@lucid-evolution/lucid": "^0.4.18",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
@@ -50,6 +56,7 @@
     "@wojtekmaj/react-hooks": "^1.19.0",
     "axios": "^1.6.8",
     "bech32": "^2.0.0",
+    "bip39": "^3.1.0",
     "buffer": "^6.0.3",
     "cbor": "^10.0.3",
     "cbor-js": "^0.1.0",
@@ -70,7 +77,8 @@
     "next": "^15.1.2",
     "next-themes": "^0.2.1",
     "p-limit": "^6.1.0",
-    "pdfjs-dist": "^4.3.136",
+    "pdfjs-dist": "4.8.69",
+    "pinata": "^1.10.1",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
@@ -78,7 +86,7 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.0",
-    "react-pdf": "^9.0.0",
+    "react-pdf": "^9.2.1",
     "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
     "sharp": "^0.33.5",
@@ -96,9 +104,10 @@
     "@types/cbor-js": "^0.1.1",
     "@types/memory-cache": "^0.2.5",
     "@types/node": "^17.0.45",
+    "@types/prismjs": "^1.26.5",
     "@types/punycode": "^2.1.4",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.20",
@@ -112,6 +121,6 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^4.9.5"
+    "typescript": "^5.7.3"
   }
 }
