--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
       "@/*": [
@@ -29,7 +28,12 @@
       }
     ],
     "strictNullChecks": true,
-    "target": "ES2017"
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types"
+    ],
+    "target": "ES2022",
+    "jsx": "preserve"
   },
   "include": [
     "next-env.d.ts",
