--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,10 @@
 {
   "tabWidth": 2,
-  "useTabs": true,
+  "useTabs": false,
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
   "arrowParens": "always",
-  "printWidth": 120,
+  "printWidth": 100,
   "plugins": ["prettier-plugin-tailwindcss"]
-
 }
