remove unused code

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "debounce": "^2.0.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.0.24",
