--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "next-themes": "^0.2.1",
     "p-limit": "^6.1.0",
     "pdfjs-dist": "4.8.69",
+    "peerjs": "^1.5.4",
     "pinata": "^1.10.1",
     "prismjs": "^1.29.0",
     "punycode": "^2.3.1",
