--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@firebase/messaging": "^0.12.8",
     "@firebase/storage": "^0.13.4",
     "@hookform/resolvers": "^3.3.4",
+    "@huggingface/inference": "^3.1.2",
+    "@huggingface/transformers": "^3.3.2",
     "@lucid-evolution/lucid": "^0.4.18",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
@@ -66,7 +68,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "debounce": "^2.0.0",
-    "firebase": "^10.14.1",
+    "firebase": "^11.2.0",
     "framer-motion": "^11.0.24",
     "jspdf": "^2.5.1",
     "lodash": "^4.17.21",
