--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-pdf": "^9.2.1",
     "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
+    "resend": "^4.1.2",
     "sharp": "^0.33.5",
     "sonner": "^1.3.1",
     "stream": "^0.0.2",
