--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@uidotdev/usehooks": "^2.4.1",
     "@vercel/analytics": "^1.4.1",
     "@vercel/kv": "^3.0.0",
+    "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.1.0",
     "@wojtekmaj/react-hooks": "^1.19.0",
     "axios": "^1.6.8",
