--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "prismjs": "^1.29.0",
     "punycode": "^2.3.1",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.51.0",
