Improve NFT Minter metadata preview with syntax highlighting

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "debounce": "^2.0.0",
     "firebase": "^11.2.0",
     "framer-motion": "^11.0.24",
-    "jspdf": "^2.5.1",
+    "jspdf": "^3.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucid-cardano": "^0.10.11",
@@ -95,6 +95,7 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.0",
     "react-pdf": "^9.2.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tradingview-embed": "^3.0.6",
     "react-transition-group": "^4.4.5",
     "resend": "^4.1.2",
@@ -116,6 +117,7 @@
     "@types/punycode": "^2.1.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/parser": "^5.61.0",
     "autoprefixer": "^10.4.20",
