--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@ada-anvil/weld": "^0.5.0",
     "@blockfrost/blockfrost-js": "^5.7.0",
     "@clerk/nextjs": "^6.9.1",
     "@clerk/themes": "^2.2.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@effect/schema": "^0.75.5",
     "@emurgo/cardano-serialization-lib-asmjs": "^13.2.0",
     "@firebase/firestore": "^4.7.5",
