--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "buffer": "^6.0.3",
     "cbor": "^10.0.3",
     "cbor-js": "^0.1.0",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
@@ -74,7 +75,9 @@
     "debounce": "^2.0.0",
     "firebase": "^11.2.0",
     "framer-motion": "^11.0.24",
+    "highlight.js": "^11.11.1",
     "jspdf": "^3.0.0",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lucid-cardano": "^0.10.11",
